fix(buttons): Properly align button in Link Search

--- a/src/stylesheets/modules/forms/cf_link_editor.styl
+++ b/src/stylesheets/modules/forms/cf_link_editor.styl
@@ -88,22 +88,22 @@
 .link-editor__controls
   position: relative
   display: flex
+  align-items: center
+
+.link-editor__search-input
+  flex-grow: 1
+  margin-right: 1.6rem
+
+.link-editor__add-button
+  flex-shrink: 0
+  margin-left: auto
+  padding-top: 0.5rem
+  padding-bottom: 0.5rem
+
 
 .link-editor__search
   position: relative
   margin-bottom: 18px
-
-  .l-search-w-autocomplete
-    width: 80%
-    float: left
-
-  .add-new
-    margin-left: auto
-  .add-new
-    .btn,
-    &.btn
-      padding-top: 7px
-      padding-bottom: 6px
 
   .endless-container
     max-height: 350px
